@@ -380,10 +380,8 @@ sub get_comics {
 		$referer = $rli->{'referer'} if exists $rli->{'referer'};
 		
 		if ($separate_comics) {
-			$_ = $rli->{'name'};
-			s/\s/_/g;
-			/(\w+)-\d+/;
-			$rli->{'subdir'} = $1;
+			$rli->{'subdir'} = $rli->{'title'};
+			$rli->{'subdir'} =~ s/\s/_/g;
 			if (! -e "$comics_dir/$rli->{'subdir'}" ) {
 				print "Creating directory $rli->{'subdir'}\n" if $verbose;
 				mkdir("$comics_dir/$rli->{'subdir'}", 0755);
